--- a/aa09-battleship-dom-temp/index.html
+++ b/aa09-battleship-dom-temp/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <h1>Battleship</h1>
+    <div class="button">
+        <button onclick="window.location.reload()">Reset Game</button>
+    </div>
     <div id="gameboard"></div>
 </body>
 
